--- a/Seg Nav/Base.lproj/Main.storyboard
+++ b/Seg Nav/Base.lproj/Main.storyboard
@@ -36,6 +36,9 @@
                                                 </label>
                                             </subviews>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <segue destination="aY9-lJ-kIj" kind="show" id="jTX-Ep-f0p"/>
+                                        </connections>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" textLabel="4LK-si-U2e" style="IBUITableViewCellStyleDefault" id="zjB-SE-K8p">
                                         <rect key="frame" x="0.0" y="44" width="375" height="44"/>
@@ -67,6 +70,36 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="WJW-WY-IFA" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2018.4000000000001" y="798.35082458770626"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="IYC-pl-nve">
+            <objects>
+                <viewController id="aY9-lJ-kIj" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="cWj-dn-sBh"/>
+                        <viewControllerLayoutGuide type="bottom" id="dYw-hn-wX3"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="W3v-CO-rXM">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Single View" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wbJ-Bq-MER">
+                                <rect key="frame" x="143" y="323" width="89" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="wbJ-Bq-MER" firstAttribute="centerY" secondItem="W3v-CO-rXM" secondAttribute="centerY" id="UHN-VJ-j4s"/>
+                            <constraint firstItem="wbJ-Bq-MER" firstAttribute="centerX" secondItem="W3v-CO-rXM" secondAttribute="centerX" id="zAy-3y-BoC"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="J8l-bT-oTw" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2744.8000000000002" y="797.45127436281871"/>
         </scene>
         <!--Seg Nav-->
         <scene sceneID="cGR-I2-jw0">
